Added troubleshooting steps